--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
         "@emotion/styled": "^11.9.3",
         "@mui/icons-material": "^5.8.4",
         "@mui/material": "^5.8.7",
+        "@reduxjs/toolkit": "^1.8.3",
+        "axios": "^0.27.2",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
+        "react-query": "^3.39.1",
+        "react-redux": "^8.0.2",
         "react-router-dom": "^6.3.0",
         "swiper": "^8.2.6"
     },
@@ -21,6 +25,7 @@
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
         "@vitejs/plugin-react": "^1.3.0",
+        "react-query-devtools": "^2.6.3",
         "typescript": "^4.6.3",
         "vite": "^2.9.9"
     }
